// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metadata should not render an empty list 1`] = `<React.Fragment />`;

exports[`Metadata should not render metadata without value 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="Label"
  >
    <dt>
      Label
    </dt>
    <dd
      className=""
    >
      string value
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render a Geolocation viewer when the metadata is type geolocation 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-geolocation "
    key="Geolocation Label"
  >
    <dt>
      Geolocation Label
    </dt>
    <dd
      className=""
    >
      <GeolocationViewer
        onlyForCards={true}
        points={
          Array [
            Object {
              "lat": 13,
              "lon": 7,
            },
          ]
        }
      />
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render a Markdown when the metadata is type mardown 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-markdown "
    key="label array"
  >
    <dt>
      label array
    </dt>
    <dd
      className=""
    >
      <MarkdownViewer
        html={false}
        lists={Array []}
        markdown="some markdown text"
      />
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render a media field 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-multimedia "
    key="Media Label"
  >
    <dt>
      Media Label
    </dt>
    <dd
      className=""
    >
      <MarkdownViewer
        html={false}
        lists={Array []}
        markdown="{media}(http://youtube.com/videoid)"
      />
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render an image field 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-multimedia "
    key="Image Label"
  >
    <dt>
      Image Label
    </dt>
    <dd
      className=""
    >
      <img
        alt="Image Label"
        className="multimedia-img cover"
        src="http://some.url.com/image.jpg"
      />
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render array values separated by ", " 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="label array"
  >
    <dt>
      label array
    </dt>
    <dd
      className=""
    >
      <ValueList
        compact={false}
        property={
          Object {
            "label": "label array",
            "value": Array [
              Object {
                "value": "first_value",
              },
              Object {
                "value": "second_value",
              },
            ],
          }
        }
      />
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render links when multiple properties have url 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="label array"
  >
    <dt>
      label array
    </dt>
    <dd
      className=""
    >
      <ValueList
        compact={false}
        property={
          Object {
            "label": "label array",
            "value": Array [
              Object {
                "value": <Connect(I18NLink)
                  to="url1"
                >
                  first_value
                </Connect(I18NLink)>,
              },
              Object {
                "value": <Connect(I18NLink)
                  to="url2"
                >
                  second_value
                </Connect(I18NLink)>,
              },
            ],
          }
        }
      />
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render links when the property has url 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="withUrl"
  >
    <dt>
      withUrl
    </dt>
    <dd
      className=""
    >
      <Connect(I18NLink)
        to="url"
      >
        string value
      </Connect(I18NLink)>
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render property not have this item when type is null 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="metadata without property"
  >
    <dt>
      metadata without property
    </dt>
    <dd
      className=""
    >
      No property
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render sorted property with sorted styles 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="sortedBy"
  >
    <dt>
      sortedBy
    </dt>
    <dd
      className="item-current-sort"
    >
      string value
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata should render string values 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="Label"
  >
    <dt>
      Label
    </dt>
    <dd
      className=""
    >
      string value
    </dd>
  </dl>
</React.Fragment>
`;

exports[`Metadata when passing compact prop should pass it to ValueList 1`] = `
<React.Fragment>
  <dl
    className="metadata-type-default "
    key="label array"
  >
    <dt>
      label array
    </dt>
    <dd
      className=""
    >
      <ValueList
        compact={true}
        property={
          Object {
            "label": "label array",
            "value": Array [
              Object {
                "value": <Connect(I18NLink)
                  to="url1"
                >
                  first_value
                </Connect(I18NLink)>,
              },
              Object {
                "value": <Connect(I18NLink)
                  to="url2"
                >
                  second_value
                </Connect(I18NLink)>,
              },
            ],
          }
        }
      />
    </dd>
  </dl>
</React.Fragment>
`;
